# resource_manager

./: CMakeLists.txt  main.cpp
include/: resource.h  resource_manager.h  shared_resource.h  unique_resource.h  weak_resource.h
src/: main.cpp  resource.cpp  resource_manager.cpp  shared_resource.cpp  unique_resource.cpp  weak_resource.cpp
